--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding/Customers.jasper=UTF-8
 encoding/Customers.jrxml=UTF-8
+encoding/Employee.jasper=UTF-8
 encoding/Employee.jrxml=UTF-8
 encoding/Main.jrxml=UTF-8
